[gd_scene load_steps=7 format=2]

[ext_resource path="res://2d/StarPropertiesControl.gd" type="Script" id=1]
[ext_resource path="res://assets/background_scene.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ns1.png" type="Texture" id=3]
[ext_resource path="res://assets/new_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/background.ogg" type="AudioStream" id=5]

[sub_resource type="Theme" id=1]

[node name="StarPropertiesControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_right = -10.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]
position = Vector2( 523, 306 )
scale = Vector2( 1.625, 2.15493 )
frame = 57

[node name="Title" type="Label" parent="."]
margin_left = 310.0
margin_top = 30.0
margin_right = 770.0
margin_bottom = 70.0
text = "Star Properties"
align = 1

[node name="MassLabel" type="Label" parent="."]
margin_left = 750.112
margin_top = 120.0
margin_right = 790.112
margin_bottom = 134.0
text = "mass"

[node name="RadiusLabel" type="Label" parent="."]
margin_left = 750.112
margin_top = 190.0
margin_right = 792.112
margin_bottom = 204.0
rect_rotation = 0.459578
text = "Radius"

[node name="Mass" type="SpinBox" parent="."]
margin_left = 830.112
margin_top = 120.0
margin_right = 1010.11
margin_bottom = 144.0
min_value = 10.0
max_value = 2.68435e+008
value = 10.0

[node name="Radius" type="SpinBox" parent="."]
margin_left = 830.112
margin_top = 184.0
margin_right = 1010.11
margin_bottom = 208.0
max_value = 1.07374e+009

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 279.5, 310.043 )
scale = Vector2( 2.08594, 2.08594 )
texture = ExtResource( 3 )

[node name="Forward" type="Button" parent="Sprite"]
margin_left = 72.5379
margin_top = -12.601
margin_right = 93.5379
margin_bottom = 7.39904
theme = ExtResource( 4 )
text = " >"

[node name="Backward" type="Button" parent="Sprite"]
margin_left = -94.0234
margin_top = -12.2587
margin_right = -73.0234
margin_bottom = 7.74129
theme = ExtResource( 4 )
text = "< "

[node name="Submit" type="Button" parent="."]
margin_left = 812.0
margin_top = 238.0
margin_right = 962.0
margin_bottom = 278.0
theme = ExtResource( 4 )
text = "Submit"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="pressed" from="Sprite/Forward" to="." method="_on_Forward_pressed"]
[connection signal="pressed" from="Sprite/Backward" to="." method="_on_Backward_pressed"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
